--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
 
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation 'com.google.firebase:firebase-database-ktx'
+
 
 }
